--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -209,6 +209,17 @@
   padding-right: 40px;
 }
 
+.navigation__button {
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.navigation__button:hover,
+.navigation__button:focus {
+  fill: getColor("accent-color");
+}
+
 .navigation__socials {
   margin-top: 64px;
   display: inline-flex;
