--- a/css/main.css
+++ b/css/main.css
@@ -423,6 +423,20 @@ text {
   padding-right: 40px;
 }
 
+.navigation__button {
+  -webkit-transition-property: fill;
+  transition-property: fill;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.navigation__button:hover,
+.navigation__button:focus {
+  fill: #2196f3;
+}
+
 .navigation__socials {
   margin-top: 64px;
   display: -webkit-inline-box;
