--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -39,6 +39,9 @@
     justify-content: center;
     align-items: center;
   }
+  @media screen and (min-width: 1200px) {
+    justify-content: flex-start;
+  }
 }
 
 .logo--white {
