--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -13,6 +13,7 @@
 
 .clients__item {
   margin: 15px;
+  height: 92px;
   flex-basis: calc((100% - 4 * 15px) / 2);
   @media screen and (min-width: 768px) {
     flex-basis: calc((100% - 6 * 15px) / 3);
