--- a/sass/utils/_general.scss
+++ b/sass/utils/_general.scss
@@ -1,12 +1,15 @@
+html {
+  @media screen and (min-width: 320px) {
+    overflow-x: hidden;
+  }
+}
+
 body {
   background-color: getColor("background-white");
   font-family: Roboto, sans-serif;
   font-size: 14px;
   color: getColor("paragraph-color");
   letter-spacing: 0.03em;
-  @media screen and (min-width: 480px) {
-    overflow-x: hidden;
-  }
 }
 
 a {
@@ -56,6 +59,10 @@ text {
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+
+  @media screen and (min-width: 320px) {
+    max-width: 320px;
+  }
 
   @media screen and (min-width: 480px) {
     max-width: 480px;
