--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,16 @@
 @charset "UTF-8";
+@media screen and (min-width: 320px) {
+  html {
+    overflow-x: hidden;
+  }
+}
+
 body {
   background-color: getColor("background-white");
   font-family: Roboto, sans-serif;
   font-size: 14px;
   color: getColor("paragraph-color");
   letter-spacing: 0.03em;
-}
-@media screen and (min-width: 480px) {
-  body {
-    overflow-x: hidden;
-  }
 }
 
 a {
@@ -59,6 +60,11 @@ text {
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+@media screen and (min-width: 320px) {
+  .container {
+    max-width: 320px;
+  }
 }
 @media screen and (min-width: 480px) {
   .container {
@@ -138,9 +144,7 @@ text {
 }
 
 .header {
-  position: relative;
   border-bottom: 1px solid #ececec;
-  position: relative;
 }
 .header__container {
   font-weight: 500;
@@ -221,7 +225,7 @@ text {
 /* Студія, Потфоліо, Контакти */
 @media screen and (max-width: 767px) {
   .navigation__choiсe {
-    margin-bottom: 306px;
+    margin-bottom: auto;
   }
 }
 @media screen and (min-width: 768px) {
@@ -306,16 +310,32 @@ text {
     background-color: #2196f3;
   }
 }
+@media screen and (max-width: 768px) {
+  .navigation__link--current:after {
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+  }
+}
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+.navigation__contacts {
+  letter-spacing: 0.02em;
+  line-height: 1.17;
+}
+@media screen and (max-width: 479px) {
+  .navigation__contacts {
+    font-size: 22px;
+    line-height: 1.17;
+  }
+}
+@media screen and (min-width: 768px) {
   .navigation__contacts {
     font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.02em;
   }
 }
 @media screen and (min-width: 1200px) {
   .navigation__contacts {
+    font-size: 14px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -334,23 +354,51 @@ text {
 }
 
 .navigation__contacts .navigation__tel {
-  font-size: 34px;
-  line-height: 1;
-  letter-spacing: 0.02em;
   color: #2196f3;
+  letter-spacing: 0.02em;
+}
+@media screen and (min-width: 480px) {
+  .navigation__contacts .navigation__tel {
+    font-size: 34px;
+    line-height: 1.17;
+  }
 }
 @media screen and (min-width: 768px) {
   .navigation__contacts .navigation__tel {
-    font-size: 14px;
-    line-height: 1.14;
-    font-style: medium;
-    letter-spacing: 0.02em;
+    font-size: 12px;
     color: #757575;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .navigation__contacts .navigation__tel {
+    font-size: 14px;
   }
 }
 
 .navigation__contacts .navigation__mail {
   color: #757575;
+}
+@media screen and (max-width: 479px) {
+  .navigation__contacts .navigation__mail {
+    font-size: 22px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+  }
+}
+@media screen and (min-width: 480px) {
+  .navigation__contacts .navigation__mail {
+    font-size: 24px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .navigation__contacts .navigation__mail {
+    font-size: 12px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .navigation__contacts .navigation__mail {
+    font-size: 14px;
+  }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .navigation__contacts .navigation__mail {
@@ -363,7 +411,6 @@ text {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  color: #757575;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -388,15 +435,34 @@ text {
 
 @media screen and (max-width: 767px) {
   .navigation__mobile {
-    display: none;
-    position: absolute;
-    top: 100%;
+    position: fixed;
+    top: 0;
     left: 0;
-    width: 100%;
-    padding: 20px;
-    text-align: center;
-    font-size: 20px;
+    width: 100vw;
+    height: 100vh;
+    padding: 32px;
     background-color: #ffffff;
+    padding-left: 40px;
+    padding-top: 48px;
+    padding-bottom: 48px;
+    padding-right: 48px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    z-index: 999;
+    -webkit-transform: translateX(100%);
+            transform: translateX(100%);
+    -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 }
 @media screen and (min-width: 768px) {
@@ -411,14 +477,27 @@ text {
 }
 
 .navigation__mobile.is-open {
-  display: block;
-  padding-top: 48px;
-  padding-bottom: 48px;
-  padding-left: 40px;
-  padding-right: 40px;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 
 .navigation__button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  outline: none;
   -webkit-transition-property: fill;
   transition-property: fill;
   -webkit-transition-duration: 250ms;
@@ -426,21 +505,41 @@ text {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (min-width: 768px) {
+  .navigation__button {
+    display: none;
+  }
+}
 
 .navigation__button:hover,
 .navigation__button:focus {
   fill: #2196f3;
 }
 
+.menu__icon--close {
+  position: absolute;
+  top: 21px;
+  right: 21px;
+}
+
 .navigation__socials {
+  color: #2196f3;
   margin-top: 64px;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  font-size: 18px;
   letter-spacing: 0.02em;
   line-height: 1.22;
-  color: #2196f3;
+}
+@media screen and (max-width: 479px) {
+  .navigation__socials {
+    font-size: 11px;
+  }
+}
+@media screen and (min-width: 480px) {
+  .navigation__socials {
+    font-size: 18px;
+  }
 }
 
 .line {
@@ -585,10 +684,16 @@ text {
   border-radius: 4px;
   z-index: 2;
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 480px) {
   .modal {
     height: 609px;
     width: 450px;
+  }
+}
+@media screen and (max-width: 479px) {
+  .modal {
+    height: 640px;
+    width: 290px;
   }
 }
 
@@ -647,9 +752,14 @@ text {
   letter-spacing: 0.01em;
   width: 448px;
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 480px) {
   .form {
     width: 370px;
+  }
+}
+@media screen and (max-width: 479px) {
+  .form {
+    width: 210px;
   }
 }
 
@@ -831,7 +941,7 @@ text {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
@@ -888,12 +998,6 @@ text {
 
 .confirm__contract {
   margin-left: 8.38px;
-}
-@media screen and (max-width: 1199px) {
-  .confirm__contract {
-    font-size: 12px;
-    line-height: 1.17;
-  }
 }
 
 .contract {
