--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -57,7 +57,7 @@
 /* Студія, Потфоліо, Контакти */
 .navigation__choiсe {
   @media screen and (max-width: 767px) {
-    margin-bottom: 306px;
+    margin-bottom: auto;
   }
   @media screen and (min-width: 768px) {
     display: flex;
@@ -122,17 +122,26 @@
     border-radius: 2px;
     background-color: getColor("accent-color");
   }
+  @media screen and (max-width: 768px) {
+    align-items: flex-end;
+  }
 }
 
 .navigation__contacts {
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    font-size: 12px;
+  letter-spacing: 0.02em;
+  line-height: 1.17;
+  @media screen and (max-width: 479px) {
+    font-size: 22px;
     line-height: 1.17;
-    letter-spacing: 0.02em;
+  }
+  @media screen and (min-width: 768px) {
+    font-size: 12px;
   }
   @media screen and (min-width: 1200px) {
+    font-size: 14px;
     display: flex;
   }
+  
 }
 
 /* при наведенні */
@@ -147,30 +156,47 @@
 }
 
 .navigation__contacts .navigation__tel {
-  font-size: 34px;
-  line-height: 1;
-  letter-spacing: 0.02em;
   color: getColor("accent-color");
-  @media screen and (min-width: 768px) {
+  letter-spacing: 0.02em;
+ 
+  @media screen and (min-width: 480px) {
+  font-size: 34px;
+  line-height: 1.17;
+}
+@media screen and (min-width: 768px) {
+  font-size: 12px;
+  color: getColor("paragraph-color");
+}
+  @media screen and (min-width: 1200px) {
     font-size: 14px;
-    line-height: 1.14;
-    font-style: medium;
-    letter-spacing: 0.02em;
-    color: #757575;
   }
 }
 
 .navigation__contacts .navigation__mail {
-  color: #757575;
+
+  color: getColor("paragraph-color");
+  @media screen and (max-width: 479px) {
+    font-size: 22px;
+    line-height: 1.17;
+    letter-spacing: 0.02em;
+  }
+  @media screen and (min-width: 480px) {
+    font-size: 24px;
+  }
+  @media screen and (min-width: 768px) {
+    font-size: 12px;
+  }
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+  }
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     padding-bottom: 10px;
-  }
+  } 
 }
 
 .navigation__contacts .navigation__mail,
 .navigation__contacts .navigation__tel {
   display: flex;
-  color: getColor("paragraph-color");
   align-items: center;
   transition-property: color, fill;
   transition-duration: 250ms;
@@ -188,17 +214,26 @@
   margin-right: 40px;
 }
 
+
 .navigation__mobile {
   @media screen and (max-width: 767px) {
-    display: none;
-    position: absolute;
-    top: 100%;
+    position: fixed;
+    top: 0;
     left: 0;
-    width: 100%;
-    padding: 20px;
-    text-align: center;
-    font-size: 20px;
+    width: 100vw;
+    height: 100vh;
+    padding: 32px;
     background-color: #ffffff;
+    padding-left: 40px;
+    padding-top: 48px;
+    padding-bottom: 48px;
+    padding-right: 48px;
+    justify-content: space-between;
+    z-index: 999;
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: flex;
+    flex-direction: column;
   }
   @media screen and (min-width: 768px) {
     display: none;
@@ -210,31 +245,52 @@
 }
 
 .navigation__mobile.is-open {
-  display: block;
-  padding-top: 48px;
-  padding-bottom: 48px;
-  padding-left: 40px;
-  padding-right: 40px;
+  transform: translateX(0);
 }
 
 .navigation__button {
-  transition-property: fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    border-radius: 50%;
+    outline: none;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    @media screen and (min-width: 768px) {
+      display: none;}
+    }
+  
+ 
 
 .navigation__button:hover,
 .navigation__button:focus {
   fill: getColor("accent-color");
 }
 
+.menu__icon--close {
+  position: absolute;
+  top: 21px;
+  right: 21px;
+}
+
 .navigation__socials {
+  color: getColor("accent-color");
   margin-top: 64px;
   display: inline-flex;
-  font-size: 18px;
   letter-spacing: 0.02em;
   line-height: 1.22;
-  color: getColor("accent-color");
+  @media screen and (max-width: 479px) {
+    font-size: 11px;
+  }
+  @media screen and (min-width: 480px) {
+  font-size: 18px;
+}
 }
 
 .line {
