--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -6,20 +6,22 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  height: 581px;
-  width: 528px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   z-index: 2;
+  @media screen and (max-width: 479px) {
+    height: 640px;
+    width: 290px;
+  }
   @media screen and (min-width: 480px) {
     height: 609px;
     width: 450px;
   }
-  @media screen and (max-width: 479px) {
-    height: 640px;
-    width: 290px;
+  @media screen and (min-width: 1200px) {
+    height: 581px;
+    width: 528px;
   }
 }
 
@@ -67,13 +69,7 @@
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
-  width: 448px;
-  @media screen and (min-width: 480px) {
-    width: 370px;
-  }
-  @media screen and (max-width: 479px) {
-    width: 210px;
-  }
+  width: 100%;
 }
 
 .form__field {
@@ -182,6 +178,9 @@
   text-align: left;
   align-items: center;
   justify-content: center;
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+  }
 }
 
 .confirm__checkbox {
