--- a/css/main.css
+++ b/css/main.css
@@ -676,13 +676,17 @@ text {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  height: 581px;
-  width: 528px;
   background: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   z-index: 2;
+}
+@media screen and (max-width: 479px) {
+  .modal {
+    height: 640px;
+    width: 290px;
+  }
 }
 @media screen and (min-width: 480px) {
   .modal {
@@ -690,10 +694,10 @@ text {
     width: 450px;
   }
 }
-@media screen and (max-width: 479px) {
+@media screen and (min-width: 1200px) {
   .modal {
-    height: 640px;
-    width: 290px;
+    height: 581px;
+    width: 528px;
   }
 }
 
@@ -750,17 +754,7 @@ text {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
-  width: 448px;
-}
-@media screen and (min-width: 480px) {
-  .form {
-    width: 370px;
-  }
-}
-@media screen and (max-width: 479px) {
-  .form {
-    width: 210px;
-  }
+  width: 100%;
 }
 
 .form__field {
@@ -952,6 +946,11 @@ text {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+@media screen and (min-width: 1200px) {
+  .confirm {
+    font-size: 14px;
+  }
 }
 
 .confirm__checkbox {
