--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -118,6 +118,7 @@
   left: 0;
   width: 100%;
   height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   visibility: visible;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
